--- a/reflections.csproj
+++ b/reflections.csproj
@@ -22,17 +22,23 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\bg_hr.png" />
+    <Content Include="images\blacktocat.png" />
+    <Content Include="images\icon_download.png" />
+    <Content Include="images\sprite_download.png" />
     <Content Include="index.html" />
+    <Content Include="stylesheets\github-light.css" />
+    <Content Include="stylesheets\stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="javascripts\main.js" />
+    <Content Include="posts\05102016.html" />
     <Content Include="README.md" />
     <Content Include=".gitignore" />
     <Content Include="params.json" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="css\" />
     <Folder Include="html\" />
-    <Folder Include="js\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
